# AllAbout360

./: CMakeLists.txt  README.md
calibration/: CMakeLists.txt  dfe2eqr-calib.cpp
dfe2eqr_calibration/: CMakeLists.txt  dfe2eqr-calib.cpp
dfe2eqr_mapping/: CMakeLists.txt
dfe2eqr_mapping/src/: dfe2eqr-cuda.cpp  dfe2eqr.cpp  mapping.cu
mapping/: CMakeLists.txt
mapping/src/: dfe2eqr.cpp  mapping.h
src/: calibration.cpp  clerror.h  example.cpp  mapping.cl  mapping.cpp  mapping.cu  mapping.h
